--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,82 @@
-h1 {
+* {
+  font-family: "lato", sans-serif;
+}
+
+//---------------------- HEADER ----------------------
+header h1 {
   color: #d04f4f;
+  font-size: 36px;
+  line-height: 46.87px;
+  text-align: center;
+}
+
+#search-input {
+  max-width: 1240px;
+  height: 69px;
+  background-color: #e7e7e7;
+  color: black;
+  border: none;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+}
+
+.search {
+  background-color: #e7e7e7;
+  border: none;
+  cursor: pointer;
+}
+
+//---------------------- SORT SECTION ----------------------
+.close-tag {
+  cursor: pointer;
+}
+
+.btn {
+  display: block;
+  min-width: 170px;
+  width: auto;
+  height: 69px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21.6px;
+  text-align: center;
+  outline: none;
+}
+
+.search-text-button {
+  margin: 0;
+}
+
+.input-search {
+  display: none;
+  color: white;
+  background: none;
+  outline: none;
+}
+
+.input-search::placeholder {
+  opacity: 0.5;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: center;
+}
+
+.dropdown-menu {
+  min-width: 170px;
+  width: auto;
+  height: 69px;
+  border-radius: 0 0 5px 5px;
+}
+
+//---------------------- CARD SECTION ----------------------
+.card-img {
+  height: 180px;
+  border-radius: 5px 5px 0 0;
+  background-color: #c7bebe;
+}
+
+.card-body {
+  background-color: #e7e7e7;
 }
