--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ header h1 {
   cursor: pointer;
 }
 
+.tag {
+  width: 107px;
+  height: 37px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16.8px;
+}
+
 .close-tag {
   cursor: pointer;
 }
@@ -70,12 +78,17 @@ header h1 {
 
 .card-img {
   height: 180px;
-  border-radius: 5px 5px 0 0;
   background-color: #c7bebe;
 }
 
 .card-body {
   background-color: #e7e7e7;
+}
+
+.text-description {
+  height: 109px;
+  font-size: 12px;
+  line-height: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
