Ajout overflow card-text_card.js

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,11 @@ h2 {
   border-radius: 0 0 5px 5px;
 }
 
+.card {
+  width: 380px;
+  height: 364px;
+}
+
 .card-img {
   height: 180px;
   border-radius: 5px 5px 0 0;
@@ -106,6 +111,22 @@ h2 {
   height: 109px;
   font-size: 12px;
   line-height: 12px;
+}
+
+.card-text {
+  max-height: 109px;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1240px;
+    padding: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
