modifications css + html & filter ingredients_dropdown card.js

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,7 +83,7 @@ h2 {
 .dropdown-item {
   min-width: 170px;
   min-height: 69px;
-  max-height: 50vh;
+  max-height: 48vh;
   width: auto;
   height: auto;
   border-radius: 0 0 5px 5px;
@@ -96,9 +96,9 @@ h2 {
   padding-right: 10px;
   color: white;
   cursor: pointer;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  // white-space: nowrap;
+  // text-overflow: ellipsis;
 }
 
 //---------------------- CARD SECTION ----------------------
