--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h2 {
   height: auto;
   border-radius: 0 0 5px 5px;
   margin-top: -2px;
+  transform: translate3d(0px, 69px, 0px) !important;
 }
 
 .dropdown-item {
@@ -87,9 +88,6 @@ h2 {
   width: auto;
   height: auto;
   border-radius: 5px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .dropdown-item:hover {
@@ -97,10 +95,15 @@ h2 {
 }
 
 .ingredient-item {
+  min-width: 236px;
+  width: auto;
   font-size: 18px;
   line-height: 21.6px;
   color: white;
   cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .card {
