--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,14 +30,17 @@ h2 {
 
 //---------------------- SORT SECTION ----------------------
 .tag {
-  width: 107px;
+  min-width: 107px;
   height: 37px;
   font-size: 14px;
   font-weight: 700;
   line-height: 16.8px;
+  color: white;
+  margin: 0 10px 10px 0;
 }
 
 .close-tag {
+  margin-left: 3px;
   cursor: pointer;
 }
 
@@ -80,10 +83,13 @@ h2 {
   height: auto;
   border-radius: 0 0 5px 5px;
   margin-top: -2px;
+  padding: 10px 20px;
   transform: translate3d(0px, 69px, 0px) !important;
 }
 
-.dropdown-item {
+.dropdown-ingredient-item,
+.dropdown-appliance-item,
+.dropdown-ustensil-item {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   min-width: 170px;
@@ -91,23 +97,25 @@ h2 {
   width: auto;
   height: auto;
   border-radius: 5px;
+  padding-left: 5px;
   // border-radius: 0 0 5px 5px;
   // max-height: 48vh;
   // overflow: hidden; /* A modifier une fois le tri des doublons effectue */
 }
 
-.dropdown-item:hover {
+.dropdown-ingredient-item:hover,
+.dropdown-appliance-item:hover,
+.dropdown-ustensil-item:hover {
   background: none;
 }
 
-.ingredient-item {
+.sort-item {
   min-width: 236px;
   width: auto;
   font-size: 18px;
   line-height: 21.6px;
   color: white;
   cursor: pointer;
-  // padding-right: 10px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
