ajout des recherches des éléments dans les boutons de tri

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,7 +81,7 @@ h2 {
   // max-width: 48vw;
   width: auto;
   height: auto;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 5px 5px 5px;
   margin-top: -2px;
   padding: 10px 20px;
   transform: translate3d(0px, 69px, 0px) !important;
@@ -110,7 +110,7 @@ h2 {
 }
 
 .sort-item {
-  min-width: 236px;
+  min-width: 225px;
   width: auto;
   font-size: 18px;
   line-height: 21.6px;
