--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h2 {
   min-height: 69px;
   width: auto;
   height: auto;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 5px 5px 5px;
   margin-top: -2px;
   padding: 10px 20px;
   transform: translate3d(0px, 69px, 0px) !important;
@@ -104,7 +104,7 @@ h2 {
 }
 
 .sort-item {
-  min-width: 236px;
+  min-width: 225px;
   width: auto;
   font-size: 18px;
   line-height: 21.6px;
