modifications sortButton_dropdown

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,7 @@ h2 {
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
+  padding: 1.5rem;
   text-align: center;
   outline: none;
 }
