modification css + boutons des tags

--- a/css/style.css
+++ b/css/style.css
@@ -64,15 +64,12 @@ svg {
   outline: none;
 }
 
-.search-text-button {
-  margin: 0;
-}
-
 .input-search-dropdown {
   display: none;
   color: white;
   background: none;
   outline: none;
+  border: none;
   width: 205px;
 }
 
@@ -259,10 +256,7 @@ svg {
   }
   .btn {
     width: 100%;
-    padding: 14px;
-  }
-  .btn p {
-    padding-top: 8px;
+    padding: 22px;
   }
   .input-group {
     width: 2rem;
@@ -277,7 +271,6 @@ svg {
     width: 3rem;
   }
   .input-search-dropdown {
-    padding-top: 0.5rem;
     width: 182px;
   }
   .input-search-dropdown::placeholder {
