--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,7 +77,8 @@ svg {
   color: white;
   background: none;
   outline: none;
-  border: none;
+  // border: none;
+  border: 1px solid black;
   width: 205px;
 }
 
