--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ svg {
   color: white;
   background: none;
   outline: none;
-  border: 1px solid black;
+  border: none;
   width: 205px;
 }
 
@@ -79,7 +79,6 @@ svg {
   font-weight: 700;
   font-size: 18px;
   line-height: 21.6px;
-  text-align: center;
 }
 
 .dropdown-menu {
