--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,17 +68,12 @@ svg {
   outline: none;
 }
 
-// .search-text-button {
-//   margin: 0;
-// }
-
 .input-search-dropdown {
   display: none;
   color: white;
   background: none;
   outline: none;
-  // border: none;
-  border: 1px solid black;
+  border: none;
   width: 205px;
 }
 
@@ -88,7 +83,6 @@ svg {
   font-weight: 700;
   font-size: 18px;
   line-height: 21.6px;
-  text-align: center;
 }
 
 .dropdown-menu {
@@ -114,9 +108,6 @@ svg {
   height: auto;
   border-radius: 5px;
   padding-left: 5px;
-  // border-radius: 0 0 5px 5px;
-  // max-height: 48vh;
-  // overflow: hidden; /* A modifier une fois le tri des doublons effectue */
 }
 
 .dropdown-ingredient-item:hover,
